# matrix-commander

./: .gitignore  MANIFEST.in  PyPi-Instructions.md  README.md  VERSION  help.help.txt  help.manual.txt  help.short.txt  help.usage.txt  lintmc.sh  matrix-commander.py  mc  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-publish.yml  pypi-publish-old.yml  pypi-publish.yml  release.yml  run-different-py-version.yml  run-test-delete-manually.yml  run-test-event-manually.yml  run-test-rest-manually.yml  run-test-send-manually.yml  run-test-setget-manually.yml  run-test-upload-manually.yml  run-test-version-manually.yml  run-tests.yml
auto-completion/bash/: matrix-commander.bash
docker/: Dockerfile  Dockerfile.alpine  README.adoc  matrix-commander
event-templates/: README.md  template-msc2676-edit.json  template-msc2677-react.json  template-msc3440-thread.json
logos/: README.md
matrix_commander/: __init__.py  matrix-commander  matrix-commander-tui  matrix_commander.py
scripts/: create-help-help-pre.sh  create-help-help.sh  create-help-manual.sh  create-help-short.sh  create-help-usage.sh  create-pypi-package.sh  lintmc.sh  path-adjust.sh  pypi-package-1-create.sh  pypi-package-2-publish.sh  update-1-version.sh  update-2-help-manual.py  update-2-help.py  update-3-readme.py  update-4-help-help.py  update-4-tag-between-commit-and-push.sh  update-4-tag.sh  workflow.sh  workflow.txt
test/: test-event.sh
tests/: test-delete.sh  test-event.sh  test-rest.sh  test-send.py  test-setget.sh  test-upload.sh  test-version.sh  test.1.txt  test.2.txt
