[metadata]
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/
name = matrix-commander
version = 2.24.0
author = 8go
description = A simple command-line Matrix client
long_description = file: PyPi-Instructions.md, README.md
# long_description = file: README.md
long_description_content_type = text/markdown
keywords = Matrix, chat, messaging
url = https://github.com/8go/matrix-commander
project_urls =
    Bug Tracker = https://github.com/8go/matrix-commander/issues
    repository = https://github.com/8go/matrix-commander
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Communications :: Chat

[options]
# use root, i.e. leave empty
package_dir =
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    aiohttp
    aiofiles>=0.6.0
    argparse
    asyncio
    datetime
    dbus-python
    markdown
    matrix-nio[e2e]>=0.14.1
    notify2
    Pillow
    python_magic
    uuid


[options.package_data]
# add docu if there is any inside the module(s)
* = *.md, *.rst


[options.entry_points]
console_scripts =
#   desired-command-name = module:function
    matrix-commander = matrix_commander:main

[options.packages.find]
# where is root directory, i.e. empty
where =
